--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,36 +1,37 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: ideiascasa # Your GitHub organization or username, where this repository lives
+repo: status # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-  - name: IPv6 test
-    url: forwardemail.net
-    port: 80
-    check: "tcp-ping"
-    ipv6: true
+  - name: Workflow
+    url: https://work.ideias.casa/healthz/readiness
+    icon: https://work.ideias.casa/favicon.ico
+    method: GET
+  - name: Config (Noco)
+    url: https://dados.ideias.casa/dashboard/
+    method: GET
+  - name: Metabase
+    url: https://meta.ideias.casa/
+    method: GET
+  - name: Chatwoot
+    url: https://chat.ideias.casa/android-icon-192x192.png
+    method: GET
+    icon: https://chat.ideias.casa/android-icon-192x192.png
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
+  cname: status.ideias.casa
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  name: Status - Casa das Idéias
+  introTitle: "Status dos serviços da Casa das Idéias"
+  introMessage: 
   navbar:
     - title: Status
       href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
+    - title: Site
+      href: https://ideias.casa/
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
